# omam8

./: .gitignore  CMakeLists.txt  asm.py  emu.py  genimg.py  omam8disasm.py  readme.md  rle.oasm  spec.md  vrampng.py
assembler/: CMakeLists.txt  parser.peg
assembler/src/: assembler.cpp  assembler.h  helpers.cpp  helpers.h  main.cpp  parser.c  preprocessor.cpp  preprocessor.h  rom.cpp  rom.h  shared.h
emu/: CMakeLists.txt  core.c  main.c
emulator/: CMakeLists.txt
emulator/frontends/cli/: CMakeLists.txt  platform.cpp
emulator/frontends/qt/: CMakeLists.txt  emuwindow.cpp  emuwindow.h  emuwindow.ui  main.cpp
emulator/frontends/qt/i18n/: ja_JP.ts
emulator/include/: core.h  io.h  platform.h  rom.h
emulator/include/io/: serial.h
emulator/include/opcodes/: io.h  jumps.h  math.h  simple.h  stack.h
emulator/src/: core.cpp  io.cpp  main.cpp  rom.cpp
emulator/src/io/: serial.cpp
emulator/src/opcodes/: io.cpp  jumps.cpp  math.cpp  simple.cpp  stack.cpp
examples/: bankswitch.oasm  conditionals.oasm  io.oasm  jumping_around.oasm  serial.oasm
omam8asm/: __init__.py  __main__.py  asm.py  exceptions.py
omam8emu/: CMakeLists.txt
omam8emu/include/: core.h  version.h
omam8emu/src/: core.cpp  fuzz.cpp  main.cpp
shared/: helpers.cpp  helpers.h  shared.h
spec/: ops.md  readme.md
